# ITCServer

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  ITCServerConfig.cmake  ITCServerTargets.cmake  Makefile  cmake_install.cmake
design/: itcserver.fbp
include/ITCBigNumber/: ITCBigNumber.hpp
include/ITCServerFrame/: ITCServerFrame.hpp
lib/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  libtinyxml2.8.0.0.dylib  xmltest
output/: testapp
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ITCBigNumber/: CMakeLists.txt  ITCBigNumber.cpp
src/ITCServerFrame/: CMakeLists.txt  ITCServerFrame.cpp  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/include/: TestApp.hpp
tests/src/: TestApp.cpp  main.cpp
tests/testapp/: CMakeLists.txt  Makefile  cmake_install.cmake
